# sprintagent

./: .gitignore  LICENSE  README.md  main.py  package-lock.json  package.json  pyproject.toml
configurations/: config.yaml
configurations/experiment/: core.yaml  plan_project.yaml
configurations/module_agent/: core_module_agent.yaml  workflow_module_agent.yaml
configurations/project_agent/: core_project_agent.yaml  workflow_project_agent.yaml
configurations/task_agent/: core_task_agent.yaml  workflow_task_agent.yaml
configurations/visualization_agent/: core_visualization_agent.yaml  workflow_visualization_agent.yaml
figures/: agents_internal.excalidraw  pipeline.excalidraw
paper/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
scripts/: test_mermaid_render.py
src/agent_utils/: base_stateful_agent.py  checkpoint_state.py  intra_turn_image_filter.py  scoring.py  turn_trimming_session.py
src/experiments/: __init__.py  base_experiment.py  plan_generation.py
src/module_agents/: __init__.py  base_module_agent.py  stateful_module_agent.py
src/project_agents/: Untitled  __init__.py  base_project_agent.py  stateful_project_agent.py
src/project_agents/tools/: __init__.py
src/prompts/: __init__.py  manager.py  registry.py
src/prompts/data/module_agent/: critic_agent.yaml  designer_agent.yaml  (+5 more)
src/task_agents/: __init__.py  base_task_agent.py  stateful_task_agent.py
src/utils/: logging.py  mermaid_render.py  omegaconf.py  parallel.py
src/visualization_agents/: __init__.py  base_visualization_agent.py  stateful_visualization_agent.py
(+22 files in other folders)
